--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 
 <main>
   <ul id="users">
-    <li>
-      <app-user />
+    <li *ngFor="let user of users">
+      <app-user [currentUser]="user"></app-user>
     </li>
   </ul>
 </main>
