--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,11 @@
 <main>
   <ul id="users">
     <li *ngFor="let user of users">
-      <app-user [currentUser]="user"></app-user>
+      <app-user
+        [currentUser]="user"
+        [name]="user.name"
+        [imagePath]="imagePath(user)"
+      ></app-user>
     </li>
   </ul>
 </main>
