--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -2,9 +2,9 @@
   <!-- below is an event lister -->
   <button (click)="onSelectUser()">
     <!-- below is called property binding -->
-    <img [src]="imagePath" [alt]="currentUser.name" />
+    <img [src]="imagePath" [alt]="name" />
     <!-- below is called string interpolation -->
-    <span>{{ currentUser.name }}</span>
+    <span>{{ name }}</span>
     <!-- below is how you bind an attribute to a dynamic value -->
     <!-- <div [attr.aria-valuenow]="currentVal"></div> -->
   </button>
