use @Output for select

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,10 @@
   <ul id="users">
     <li *ngFor="let user of users">
       <app-user
-        [currentUser]="user"
+        [id]="user.id"
         [name]="user.name"
         [imagePath]="imagePath(user)"
+        (select)="onSelectUser($event)"
       ></app-user>
     </li>
   </ul>
