--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -2,7 +2,7 @@
   <!-- below is an event lister -->
   <button (click)="onSelectUser()">
     <!-- below is called property binding -->
-    <img [src]="imagePath(user)" [alt]="user.ame" />
+    <img [src]="imagePath(user)" [alt]="user.name" />
     <!-- below is called string interpolation -->
     <span>{{ user.name }}</span>
     <!-- below is how you bind an attribute to a dynamic value -->
