--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     </li>
   </ul>
 
-  <app-task *ngIf="selectedUser" [selectedUser]="selectedUser"></app-task>
+  <app-tasks *ngIf="selectedUser" [selectedUser]="selectedUser"></app-tasks>
 </main>
 
 <router-outlet />
