--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -7,8 +7,8 @@
   </header>
 
   <ul>
-    <!-- <li *ngFor="let task of tasks">
-      {{ task.name }}
-    </li> -->
+    <li *ngFor="let task of tasksOfSelectedUser">
+      <app-task [task]="task"></app-task>
+    </li>
   </ul>
 </section>
