--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,12 +1,15 @@
 <ng-template [ngIf]="isAddingTask">
-  <app-new-task (cancel)="onCancelAddTask()"></app-new-task>
+  <app-new-task
+    (cancel)="onCancelAddTask()"
+    (addTask)="onAddTask($event)"
+  ></app-new-task>
 </ng-template>
 
 <section id="tasks">
   <header>
     <h2>{{ selectedUser.name }}'s Tasks</h2>
     <menu>
-      <button (click)="onAddTask()">Add Task</button>
+      <button (click)="onStartAddTask()">Add Task</button>
     </menu>
   </header>
 
