new Card for Content Projection

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<div>
+<app-card>
   <!-- below is an event lister -->
   <button [class.active]="selected" (click)="onSelectUser()">
     <!-- below is called property binding -->
@@ -8,4 +8,4 @@
     <!-- below is how you bind an attribute to a dynamic value -->
     <!-- <div [attr.aria-valuenow]="currentVal"></div> -->
   </button>
-</div>
+</app-card>
