--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,7 +1,8 @@
 <app-card>
   <article>
     <h2>{{ task.title }}</h2>
-    <time>{{ task.dueDate }}</time>
+    <!-- below uses a pipe to transform the output -->
+    <time>{{ task.dueDate | date : "fullDate" }}</time>
     <p>{{ task.summary }}</p>
     <p class="actions">
       <button (click)="onCompleteTask()">Complete</button>
