fix up tasks component

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,7 +1,7 @@
 <ng-template [ngIf]="isAddingTask">
   <app-new-task
-    (cancel)="onCancelAddTask()"
-    (addTask)="onAddTask($event)"
+    [userId]="this.selectedUser.id"
+    (close)="onCloseAddTask()"
   ></app-new-task>
 </ng-template>
 
