--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -15,7 +15,7 @@
 
   <ul>
     <li *ngFor="let task of tasksOfSelectedUser">
-      <app-task [task]="task" (complete)="onCompleteTask($event)"></app-task>
+      <app-task [task]="task"></app-task>
     </li>
   </ul>
 </section>
